# duhem

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  justfile  skills-lock.json
.claude/: settings.json
.claude/hooks/: README.md  guard-branch-switch.py  guard-branch-switch.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  dashboard.yml  dogfood.yml  drift-chreode.yml  release.yml  self-verify.yml
crates/duhem-actions/: Cargo.toml
crates/duhem-actions/sidecar/: .gitignore  README.md  index.mjs  jsconfig.json  package-lock.json  package.json
crates/duhem-actions/src/: action.rs  browser.rs  browser_provision.rs  error.rs  lib.rs  locator.rs  playwright.rs  with.rs
crates/duhem-actions/src/api/: call.rs  mod.rs  observe.rs  poll.rs  stream.rs
crates/duhem-actions/src/cli/: invoke.rs  mod.rs
crates/duhem-actions/src/db/: mod.rs  observe.rs  query.rs  seed.rs
crates/duhem-actions/src/ui/: assert_element.rs  assert_state.rs  assert_url.rs  click.rs  mod.rs  navigate.rs  select.rs  type_.rs
crates/duhem-actions/tests/: api_observe_smoke.rs  fixture_round_trip.rs  ui_smoke.rs
crates/duhem-actions/tests/fixtures/: api-echo.yml  api-observe.yml  static-page.yml
crates/duhem-cli/: Cargo.toml
crates/duhem-cli/src/: browser_cmd.rs  contract_check.rs  dashboard.rs  describe_cmd.rs  environment.rs  export_cmd.rs  filter.rs  init.rs  inputs.rs  live_link.rs  live_progress.rs  main.rs  mcp_cmd.rs  reporter.rs  reporter_config.rs  resolve.rs  run_cmd.rs  validate_cmd.rs
crates/duhem-cli/src/live_progress/: tty.rs
crates/duhem-cli/templates/init-pattern-a/: README.md  criteria.md  duhem.api.yml  duhem.ui.yml  duhem.yml
crates/duhem-cli/templates/init-pattern-b/: README.md  criteria.md  duhem.api.yml  duhem.local.yml  duhem.ui.yml  duhem.yml  gitignore-snippet  manifest-stub.yml
crates/duhem-cli/tests/: dashboard_cmd.rs  init_smoke.rs  run_flags.rs  ship.rs
crates/duhem-dashboard/: Cargo.toml  build.rs
crates/duhem-dashboard/src/: export.rs  lib.rs  live.rs  main.rs  model.rs  reader.rs  server.rs
crates/duhem-dashboard/src/reader/: mime.rs
crates/duhem-dashboard/tests/: api.rs  diff.rs  export.rs  failure.rs  live.rs  sniff.rs
crates/duhem-dashboard/tests/common/: mod.rs
crates/duhem-dashboard/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/duhem-dashboard/web/src/: App.tsx  api.ts  definition.ts  diff.ts  fold.ts  format.ts  globals.css  main.tsx  runs-context.tsx  stats.ts  styles.css  theme.tsx  ui.tsx
crates/duhem-dashboard/web/src/__tests__/: diff.test.ts  diffview.test.tsx  fold.test.ts  format.test.ts  polled-runs.test.tsx  runshell.test.tsx  stats.test.ts  views.test.tsx
crates/duhem-dashboard/web/src/components/: EventIcon.tsx  VerdictTrend.tsx  states.tsx
crates/duhem-dashboard/web/src/components/layout/: AppShell.tsx  AppSidebar.tsx  BrandMark.tsx  Breadcrumbs.tsx  CommandMenu.tsx  LiveIndicator.tsx  PageHeader.tsx  ThemeToggle.tsx  TopBar.tsx  nav.ts
crates/duhem-dashboard/web/src/components/ui/: badge.tsx  sonner.tsx
crates/duhem-dashboard/web/src/hooks/: use-mobile.ts  use-polled-runs.ts  use-width-mode.ts
crates/duhem-dashboard/web/src/lib/: utils.ts
crates/duhem-dashboard/web/src/views/: CheckPage.tsx  CriterionPage.tsx  DefinitionPage.tsx  DiffPage.tsx  Overview.tsx  ResultsPage.tsx  RunPage.tsx  RunScaffold.tsx  RunsList.tsx  VerificationPage.tsx  VerificationsList.tsx  definition-context.tsx
crates/duhem-evidence/: Cargo.toml
crates/duhem-evidence/migrations/: 0001_init.sql  0002_scoping.sql  0003_spans.sql
crates/duhem-evidence/src/: bundle.rs  event.rs  lib.rs  reader.rs  replay.rs  writer.rs
crates/duhem-evidence/src/store/: location.rs  mod.rs  sqlite.rs
crates/duhem-evidence/tests/: bundle_contract.rs  store.rs  trace.rs
crates/duhem-judge/: Cargo.toml
crates/duhem-judge/src/: aggregate.rs  lib.rs  outcome.rs  verdict.rs
crates/duhem-reporter-junit/: Cargo.toml
crates/duhem-reporter-junit/src/: main.rs
crates/duhem-reporter-pretty/: Cargo.toml
crates/duhem-reporter-pretty/src/: main.rs
crates/duhem-runtime/: Cargo.toml
crates/duhem-runtime/src/: eval.rs  lib.rs
crates/duhem-runtime/src/engine/: capture.rs  context.rs  env.rs  extract.rs  har.rs  identity.rs  inherit.rs  mod.rs  outcome.rs  registry.rs  runner.rs  setup.rs  shim.rs  template.rs  translate.rs
crates/duhem-runtime/src/engine/runner/: builder.rs
crates/duhem-runtime/tests/: api_observe_smoke.rs  api_smoke.rs  capture_smoke.rs  engine_smoke.rs  env_smoke.rs  outputs_extraction_smoke.rs
crates/duhem-schema/: Cargo.toml
crates/duhem-schema/examples/: canonicalize.rs
crates/duhem-schema/fixtures/: create-workspace.yml  typed-inputs.yml
crates/duhem-schema/fixtures/negative/: duplicate_check_id.yml  duplicate_criterion_id.yml  duplicate_step_id.yml  unresolved_input_ref.yml  unresolved_step_ref.yml
crates/duhem-schema/src/: assertion.rs  criterion.rs  environment.rs  includes.rs  jsonschema.rs  lib.rs  manifest.rs  project.rs  step.rs  validate.rs  verification.rs
crates/duhem-schema/src/expr/: mod.rs  parse.rs
crates/duhem-schema/tests/: round_trip.rs
crates/duhem-summary/: Cargo.toml
crates/duhem-summary/src/: lib.rs
demo/self-masking/: README.md  app.js  duhem.yml  render-gif.sh  render-svg.mjs  run.sh
docs/: action-reference.md  duhem-brand.md  duhem-spec.md  failure-envelope-contract.md  getting-started.md  run-bundle-contract.md  run-diff-contract.md
marketing/: README.md  launch-posts.md  teardown-tautological-tests.md
npm/: publish.config.json
npm/duhem/: README.md  bin.js  package.json
npm/scripts/: lib.mjs  prepare-platforms.mjs  publish.mjs  sync-versions.mjs
schema/: duhem.schema.json
templates/product-repo/: CODEOWNERS  README.md
verifications/: README.md
verifications/arbor-create-and-ship-app/: README.md  duhem.yml  (+1 more)
xtask/: Cargo.toml
xtask/src/: action_reference.rs  check_file_budget.rs  dx_drift.rs  main.rs  schema_changelog_check.rs  schema_drift.rs  schema_json.rs  skill_scrub.rs
(+133 files in other folders)
