[workspace]
resolver = "3"
members = [
    "crates/duhem-schema",
    "crates/duhem-judge",
    "crates/duhem-runtime",
    "crates/duhem-actions",
    "crates/duhem-evidence",
    "crates/duhem-summary",
    "crates/duhem-cli",
    "crates/duhem-reporter-pretty",
    "crates/duhem-reporter-junit",
    "xtask",
]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
repository = "https://github.com/onsager-ai/duhem"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono", "json", "uuid"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chumsky = "=1.0.0-alpha.8"
async-trait = "0.1"
regex = "1"
toml = "0.8"
futures = "0.3"
