[package]
name = "duhem-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Duhem command-line interface (the `duhem` binary)."

[[bin]]
name = "duhem"
path = "src/main.rs"

[dependencies]
duhem-schema = { path = "../duhem-schema" }
duhem-judge = { path = "../duhem-judge" }
# Live progress renderer (#299) computes durations off evidence `ts`.
chrono.workspace = true
duhem-runtime = { path = "../duhem-runtime" }
duhem-actions = { path = "../duhem-actions" }
duhem-evidence = { path = "../duhem-evidence" }
duhem-summary = { path = "../duhem-summary" }
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
