[package]
name = "duhem-evidence"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Append-only run trace + blob writer for verification evidence."

[dependencies]
duhem-schema = { path = "../duhem-schema" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
