[package]
name = "duhem-evidence"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Append-only run trace + blob writer for verification evidence."

[dependencies]
duhem-schema = { path = "../duhem-schema" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"
ulid = "1"

[dev-dependencies]
tempfile = "3"
