[package]
name = "duhem-evidence"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Append-only run trace + blob writer for verification evidence."

[dependencies]
duhem-judge = { path = "../duhem-judge" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sqlx.workspace = true
async-trait.workspace = true
directories.workspace = true
sha2 = "0.10"
hex = "0.4"
ulid = "1"

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
temp-env = "0.3"
