[package]
name = "duhem-reporter-pretty"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Reference plugin reporter: terminal ANSI table over RunSummary stdin."

[[bin]]
name = "duhem-reporter-pretty"
path = "src/main.rs"

[dependencies]
duhem-summary = { path = "../duhem-summary" }
duhem-judge = { path = "../duhem-judge" }
serde_json.workspace = true
