[package]
name = "duhem-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Check executor — orchestrates step execution against the real delivery web."

[dependencies]
duhem-schema = { path = "../duhem-schema" }
duhem-judge = { path = "../duhem-judge" }
duhem-actions = { path = "../duhem-actions" }
duhem-evidence = { path = "../duhem-evidence" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
regex.workspace = true
playwright.workspace = true
reqwest.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3"
