[package]
name = "duhem-schema"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
description = "Verification Definition types and validator."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
chumsky.workspace = true
glob = "0.3"

[dev-dependencies]
tempfile = "3"
